refined trail strategy